updated the galera .cnf templates

--- a/src/Modules/MysqlServerGalera/Templates/ClusterStarter/wsrep.cnf
+++ b/src/Modules/MysqlServerGalera/Templates/ClusterStarter/wsrep.cnf
@@ -5,4 +5,6 @@
 #
 
 [wsrep]
-socket		= /var/run/mysqld/mysqld.sock
+wsrep_provider=/usr/lib/galera/libgalera_smm.so
+wsrep_cluster_address="gcomm://"
+wsrep_sst_method=rsync
