--- a/src/Modules/MysqlServerGalera/Templates/ClusterJoiner/wsrep.cnf
+++ b/src/Modules/MysqlServerGalera/Templates/ClusterJoiner/wsrep.cnf
@@ -5,4 +5,6 @@
 #
 
 [wsrep]
-socket		= /var/run/mysqld/mysqld.sock
+wsrep_provider=/usr/lib/galera/libgalera_smm.so
+wsrep_cluster_address="gcomm://<%tpl.php%>cluster_starter_target</%tpl.php%>"
+wsrep_sst_method=rsync
