--- a/src/Modules/PHPCI/Templates/ApacheVHost/all-ports-pre-14.04.conf
+++ b/src/Modules/PHPCI/Templates/ApacheVHost/all-ports-pre-14.04.conf
@@ -2,8 +2,8 @@ NameVirtualHost ****IP ADDRESS****
 <VirtualHost ****IP ADDRESS****>
 	ServerAdmin webmaster@localhost
 	ServerName ****SERVER NAME****
-	DocumentRoot ****WEB ROOT****/src
-	<Directory ****WEB ROOT****/src>
+	DocumentRoot ****WEB ROOT****/public
+	<Directory ****WEB ROOT****/public>
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride All
 		Order allow,deny
