--- a/src/Modules/PHPCI/Templates/PHPCI/config.yml
+++ b/src/Modules/PHPCI/Templates/PHPCI/config.yml
@@ -1,4 +1,4 @@
 b8:
-    database: { servers: { read: <tpl.php>db_read_host</tpl.php>, write: <tpl.php>db_write_host</tpl.php> }, name: <tpl.php>db_name</tpl.php>, username: <tpl.php>db_username</tpl.php>, password: <tpl.php>db_pass</tpl.php> }
+    database: { servers: { read: <%tpl.php%>db_read_host</%tpl.php%>, write: <%tpl.php%>db_write_host</%tpl.php%> }, name: <%tpl.php%>db_name</%tpl.php%>, username: <%tpl.php%>db_username</%tpl.php%>, password: <%tpl.php%>db_pass</%tpl.php%> }
 phpci:
-    url: '<tpl.php>phpci_url</tpl.php>'
+    url: '<%tpl.php%>phpci_url</%tpl.php%>'
