--- a/src/Modules/Behat/Templates/composer.json
+++ b/src/Modules/Behat/Templates/composer.json
@@ -1,11 +1,11 @@
 {
     "require": {
-        "behat/behat":           "2.4@stable",
-        "behat/mink-extension":  "1.0.0",
-        "behat/mink-goutte-driver":     "1.0.8",
-        "behat/mink-selenium2-driver":  "1.0.5"
+        "behat/behat": "~3.0@stable",
+        "behat/mink-extension": "~1.3",
+        "behat/mink-goutte-driver": "1.0.8",
+        "behat/mink-selenium2-driver": "1.0.5"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "config": {
         "bin-dir": "bin"
     }
