--- a/src/Modules/Behat/Templates/composer.json
+++ b/src/Modules/Behat/Templates/composer.json
@@ -1,9 +1,9 @@
 {
     "require": {
-        "behat/behat": "~3.0@stable",
-        "behat/mink-extension": "~1.3",
-        "behat/mink-goutte-driver": "1.0.8",
-        "behat/mink-selenium2-driver": "1.0.5"
+        "behat/behat": "~2.5.0@stable",
+        "behat/mink-extension": "~1.3.0",
+        "behat/mink-goutte-driver": "~1.1.0",
+        "behat/mink-selenium2-driver": "~1.2.0"
     },
     "minimum-stability": "stable",
     "config": {
