--- a/src/Modules/Behat/Templates/composer.json
+++ b/src/Modules/Behat/Templates/composer.json
@@ -1,9 +1,10 @@
 {
     "require": {
-        "behat/behat": "~2.5.0@stable",
-        "behat/mink-extension": "~1.3.0",
-        "behat/mink-goutte-driver": "~1.1.0",
-        "behat/mink-selenium2-driver": "~1.2.0"
+        "behat/behat": "~2.5",
+        "behat/mink": "~1.6",
+        "behat/mink-extension": "~1.1",
+        "behat/mink-goutte-driver": "~1.1",
+        "behat/mink-selenium2-driver": "~1.2"
     },
     "minimum-stability": "stable",
     "config": {
