--- a/src/Modules/Behat/Templates/composer.json
+++ b/src/Modules/Behat/Templates/composer.json
@@ -3,11 +3,11 @@
         "behat/behat": "~2.5",
         "behat/mink": "~1.6",
         "behat/mink-extension": "1.3.2",
-        "behat/mink-goutte-driver": "1.1.0",
-        "behat/mink-selenium2-driver": "~1.2",
-        "guzzle/http": "*"
+        "behat/mink-goutte-driver": "*",
+        "behat/mink-selenium2-driver": "*",
+        "behat/mink-zombie-driver": "*",
+        "guzzle/http": "*",
     },
-    "minimum-stability": "stable",
     "config": {
         "bin-dir": "bin"
     }
